Fri Feb 27 13:05:03 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/testdata/sampleimages/candle.jpg,
	  xappy/unittests/testdata/sampleimages/cat.jpg,
	  xappy/unittests/testdata/sampleimages/looroll.jpg: Add some
	  sample data for testing image search.

Fri Feb 20 10:39:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py,xappy/unittests/calc_hash.py: Add
	  calc_hash() method to ProcessedDocument, returning a hash to use
	  to avoid reindexing documents which have not changed.  Patch from
	  Pablo.

Fri Feb 20 10:21:03 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py,xappy/indexerconnection.py,
	  xappy/unittests/store_only.py: Patch from Pablo, with minor
	  tweaks from me, to add a store_only parameter to the methods
	  which process documents which only runs the STORE_CONTENT
	  actions.

Wed Feb 18 04:55:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/unittests/field_groups.py: Fix to
	  previous patch (thanks to Pablo, again).

Tue Feb 17 19:21:53 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/unittests/field_groups.py:
	  Another patch from Pablo: this one replaces the old, not very
	  handy, "group" parameter to relevant_data() with a
	  "groupnumbers" parameter, which returns the group number for each
	  bit of returned data.

Tue Feb 17 19:16:00 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/doctests/indexerconnection_doctest1.txt: Update doctest to
	  work with previous patch.

Tue Feb 17 19:13:25 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/errors.py,xappy/indexerconnection.py,
	  xappy/unittests/indexer_errors.py: Another patch from Pablo
	  Hoffman, this time to add a specific error type for reporting
	  that an ID has already been used.

Tue Feb 17 15:31:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
